[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "pygit-client"
description = "A Python-based Git Client"
readme = "README.md"
authors = [
    { name="Lance Eftink", email="leftink@hotmail.com"}
]
requires-python = ">=3.10"
license = { file="LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/leftink/pygit-client.git"
"Documentation" = "https://pygit-client.readthedocs.io/en/latest/"
"Code Quality" = "https://codeclimate.com/github/leftink/pygit-client"

[tool.setuptools_scm]
